Adjust links in html files

--- a/templates/news.html
+++ b/templates/news.html
@@ -14,16 +14,16 @@
                     <img src="../static/images/logo.png" alt="AquaEmi's logo" style = "width: 12.5vw; height: 4.5vw;">
                     <div class = "navigation_keys" id = "navigation_keys">
                         <div class = "subjects" id = "subjects">
-                            <p><a href = "index.html" title = "My water" style = "text-decoration: none; color: #00A66F;">My water</a></p>
-                            <p><a href = "map.html" title = "Map" style = "text-decoration: none; color: #00A66F;">Map</a></p>
-                            <p><a href = "travel.html" title = "Travel" style = "text-decoration: none; color: #00A66F;">Travel</a></p>
-                            <p><a href = "news.html" title = "News & Rankings" style = "text-decoration: none; color: #00A66F;">News & Rankings</a></p>
-                            <p><a href = "info.html" title = "Info" style = "text-decoration: none; color: #00A66F;">Info</a></p>
+                            <p><a href = "index" title = "My water" style = "text-decoration: none; color: #00A66F;">My water</a></p>
+                            <p><a href = "map" title = "Map" style = "text-decoration: none; color: #00A66F;">Map</a></p>
+                            <p><a href = "travel" title = "Travel" style = "text-decoration: none; color: #00A66F;">Travel</a></p>
+                            <p><a href = "news" title = "News & Rankings" style = "text-decoration: none; color: #00A66F;">News & Rankings</a></p>
+                            <p><a href = "info" title = "Info" style = "text-decoration: none; color: #00A66F;">Info</a></p>
                         </div>
                         <div class = "tools" id = "tools">
-                            <a href = "index.html"><img src = "../static/images/search.png" alt="AquaEmi's search icon" style = "width: 2vw"></a>
-                            <a href = "index.html"><img src = "../static/images/notifications.PNG" alt="AquaEmi's notifications icon" style = "width: 1.75vw"></a>
-                            <a href = "index.html"><img src = "../static/images/profile.PNG" alt="AquaEmi's profile icon" style = "width: 1.7vw;"></a>
+                            <a href = "index"><img src = "../static/images/search.png" alt="AquaEmi's search icon" style = "width: 2vw"></a>
+                            <a href = "index"><img src = "../static/images/notifications.PNG" alt="AquaEmi's notifications icon" style = "width: 1.75vw"></a>
+                            <a href = "index"><img src = "../static/images/profile.PNG" alt="AquaEmi's profile icon" style = "width: 1.7vw;"></a>
                         </div>
                     </div>
                 </div>
@@ -32,8 +32,8 @@
         <section>
             <div class = "content" id = "content">
                 <div class = "small_navigation" id = "small_navigation">
-                    <div class = "news_navigation" id = "news_navigation"><a href = "news.html" style = "color:#00C986;">News</a></div>
-                    <div class = "rankings_navigation" id = "rankings_navigation"><a href = "rankings.html">Rankings</a></div>
+                    <div class = "news_navigation" id = "news_navigation"><a href = "news" style = "color:#00C986;">News</a></div>
+                    <div class = "rankings_navigation" id = "rankings_navigation"><a href = "rankings">Rankings</a></div>
                 </div>
                 <div class = "news_content" id = "news_content">
                     <div class = "headline" id = "headline">
