--- a/templates/map_earth.html
+++ b/templates/map_earth.html
@@ -25,16 +25,16 @@
                     <img src="../static/images/logo.png" alt="AquaEmi's logo" style = "width: 12.5vw; height: 4.5vw;">
                     <div class = "navigation_keys" id = "navigation_keys">
                         <div class = "subjects" id = "subjects">
-                            <p><a href = "index.html" title = "My water" style = "text-decoration: none; color: #00A66F;">My water</a></p>
-                            <p><a href = "map.html" title = "Map" style = "text-decoration: none; color: #00A66F;">Map</a></p>
-                            <p><a href = "travel.html" title = "Travel" style = "text-decoration: none; color: #00A66F;">Travel</a></p>
-                            <p><a href = "news.html" title = "News & Rankings" style = "text-decoration: none; color: #00A66F;">News & Rankings</a></p>
-                            <p><a href = "info.html" title = "Info" style = "text-decoration: none; color: #00A66F;">Info</a></p>
+                            <p><a href = "index" title = "My water" style = "text-decoration: none; color: #00A66F;">My water</a></p>
+                            <p><a href = "map" title = "Map" style = "text-decoration: none; color: #00A66F;">Map</a></p>
+                            <p><a href = "travel" title = "Travel" style = "text-decoration: none; color: #00A66F;">Travel</a></p>
+                            <p><a href = "news" title = "News & Rankings" style = "text-decoration: none; color: #00A66F;">News & Rankings</a></p>
+                            <p><a href = "info" title = "Info" style = "text-decoration: none; color: #00A66F;">Info</a></p>
                         </div>
                         <div class = "tools" id = "tools">
-                            <a href = "index.html"><img src = "../static/images/search.png" alt="AquaEmi's search icon" style = "width: 2vw"></a>
-                            <a href = "index.html"><img src = "../static/images/notifications.PNG" alt="AquaEmi's notifications icon" style = "width: 1.75vw"></a>
-                            <a href = "index.html"><img src = "../static/images/profile.PNG" alt="AquaEmi's profile icon" style = "width: 1.7vw;"></a>
+                            <a href = "index"><img src = "../static/images/search.png" alt="AquaEmi's search icon" style = "width: 2vw"></a>
+                            <a href = "index"><img src = "../static/images/notifications.PNG" alt="AquaEmi's notifications icon" style = "width: 1.75vw"></a>
+                            <a href = "index"><img src = "../static/images/profile.PNG" alt="AquaEmi's profile icon" style = "width: 1.7vw;"></a>
                         </div>
                     </div>
                 </div>
@@ -196,7 +196,7 @@
                     <p style = "font-size: 0.8vw; margin-top: -2vw">[Last updated]</p>
                     <button class = "full_ranking" id = "full_ranking">SEE FULL RANKING</button>
                 </div>
-                <img src="../static/images/map.png" alt="AquaEmi's logo" style = "width: 10vw; height: 5vw; border-radius: 0.3vw;cursor: pointer;" onclick = "location.href='map.html';">
+                <img src="../static/images/map.png" alt="AquaEmi's logo" style = "width: 10vw; height: 5vw; border-radius: 0.3vw;cursor: pointer;" onclick = "location.href='map';">
             </div>
             </div>
             
