--- a/templates/map.html
+++ b/templates/map.html
@@ -13,7 +13,7 @@
         <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
 
         <!-- Leaflet heatmap plugin: https://github.com/Leaflet/Leaflet.heat -->
-        <script src="leaflet-heat.js"></script>
+        <script src="../static/leaflet-heat.js"></script>
     </head>
     <body>
         <section class = "navigation" id = "navigation">
@@ -49,11 +49,7 @@
                     
                     L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {}).addTo(map);
 
-                    var heat = L.heatLayer([
-                        [-6, -81, 0.6],
-                        [12, 38, 0.8],
-                        [23, 78, 0.3],
-                    ], {radius: 25, minOpacity: 0.4, gradient: {0.4: 'blue', 0.65: 'lime', 1: 'red'}}).addTo(map);
+                    var heat = L.heatLayer({{data}}, {radius: 25, minOpacity: 0.4, gradient: {0.4: 'blue', 0.65: 'lime', 1: 'red'}}).addTo(map);
                 </script>
                 <div class = "earth_map" id = "earth_map">
                     <span class = "remove_ranking" id = "remove_ranking"><i class="fa-solid fa-x fa-2xs" style="color: #ffffff;"></i></span>
