Add functionality to 'see full ranking' button

--- a/templates/index.html
+++ b/templates/index.html
@@ -345,7 +345,7 @@
                             {% endfor %}
                         </div>
                         <p style = "font-size: 0.7vw; color: #505050; margin-left: 12vw; margin-top: 2vw;">9:00, August 4</p>
-                        <button class = "full_ranking" id = "full_ranking">SEE FULL RANKING</button>
+                        <button class = "full_ranking" id = "full_ranking"><a href="rankings">SEE FULL RANKING</a></button>
                     </div>
                     <div class = "news" id = "news">
                         <div class = "headline" id = "headline">
