--- a/templates/index.html
+++ b/templates/index.html
@@ -49,10 +49,10 @@
 
                 var heat = L.heatLayer({{data | safe}}, {radius: 25, minOpacity: 0.4, gradient: {0.4: 'blue', 0.65: 'lime', 1: 'red'}}).addTo(map);
             </script>
-            <div class = "quality" id = "quality">
+            <div class = "quality" id = "quality" onclick="location.href='details/{{ current.name | safe }}';">
                 <div class = "location" id = "location">
-                    <p style = "font-size: 3vw; font-weight: bolder; margin-top: 1.2vw;">Sai Gon River</p>
-                    <p style = "font-size: 1vw; font-weight: light; margin-top: -2.5vw;">Ho Chi Minh city, Vietnam</p>
+                    <p style = "font-size: 3vw; font-weight: bolder; margin-top: 1.2vw;">{{ current.name }}</p>
+                    <p style = "font-size: 1vw; font-weight: light; margin-top: -2.5vw;">{{ current.country }}</p>
                 </div>
                 <div class = "quality_box_content" id = "quality_box_content">
                     <div class = "quality_box" id = "quality_box">
@@ -62,7 +62,7 @@
                         <div class = "quality_content" id = "quality_content">
                             <div class = "quality_wqi" id = "quality_wqi">
                                 <div class = "wqi" id = "wqi">
-                                    <p style = "font-size: 2.5vw; margin-top: 2.7vw">125*</p>
+                                    <p style = "font-size: 2.5vw; margin-top: 2.7vw"> {{ current.quality }}</p>
                                     <p style = "margin-top: -2.5vw; font-size: 0.9vw; margin-left: -0.8vw">WQI</p>
                                 </div>
                                 <div class = "water_quality" id = "water_quality">
@@ -78,19 +78,19 @@
                     <div class = "weather" id = "weather">
                         <div class = "temperature" id = "temperature">
                             <img src = "../static/images/temperature.PNG" style = "width: 2vw; height: 1.8vw">
-                            <p style = "margin: 0.25vw 0.5vw; font-size: 1vw; font-weight: bold; color: #F63E3E">35</p> 
+                            <p style = "margin: 0.25vw 0.5vw; font-size: 1vw; font-weight: bold; color: #F63E3E"> {{ current.temperature }} </p> 
                         </div>
                         <div class = "wind" id = "wind">
                             <img src = "../static/images/wind.PNG" style = "width: 1.8vw; height: 1.8vw">
-                            <p style = "margin: 0.25vw 0.5vw; font-size: 1vw; font-weight: bold; color: #F63E3E">14.8 km/h</p> 
+                            <p style = "margin: 0.25vw 0.5vw; font-size: 1vw; font-weight: bold; color: #F63E3E"> {{ current.flow }} </p> 
                         </div>
                         <div class = "wet" id = "wet">
                             <img src = "../static/images/wet.PNG" style = "margin-top: 0.12vw; width: 1.15vw; height: 1.4vw">
-                            <p style = "margin: 0.25vw 0.5vw; font-size: 1vw; font-weight: bold; color: #F63E3E">38%</p> 
+                            <p style = "margin: 0.25vw 0.5vw; font-size: 1vw; font-weight: bold; color: #F63E3E"> {{ current.turbidity }} </p> 
                         </div>
                     </div>
                 </div>
-                <p style = "font-size: 0.8vw;">Last updated 16:28</p>
+                <p style = "font-size: 0.8vw;">Last updated 16:28</p> <!-- TODO -->
                 <div class = "data_provided" id = "data_provided">
                     <div class = "logo" id = "logo">
                         <img src="../static/images/logo.png" alt="AquaEmi's logo" style = "width: 6vw; height: 2vw;">
@@ -114,7 +114,7 @@
         <section>
             <div class = "content">
                 <div class = "forecast" id = "forecast">
-                    <p style = "color: #00A66E; font-weight: bold;">Forecast in Sai Gon river, Ho Chi Minh city</p>
+                    <p style = "color: #00A66E; font-weight: bold;">Forecast in {{ current.name }}, {{ current.country }}</p>
                     <div class = "forecast_screen" id = "forecast-screen">
                         <div class = "forecast_box" id = "forecast_box_2days_ago">
                             <div class = "date" id = "date">Friday</div>
@@ -222,16 +222,16 @@
                             </div>
                         </div>
                     </div>
-                    <button class = "week_forecast">7 DAY FORECAST</button><br>
+                    <button class = "week_forecast"><a href="details/{{ current.name }}">7 DAY FORECAST</a></button><br> <!-- DOING -->
                     <i class="fa-solid fa-angle-up fa-lg" style = "color: #00A66F; margin: 1.5vw 0 0 47vw;"></i>
                 </div>
                 <div class = "other_places" id = "other_places">
                     <div class = "settings">
-                        <div class = "add_place_manage" id = "add_place" style = "margin-left: 31.5vw;">Add Place</div>
-                        <div class = "add_place_manage" id = "manage">Manage</div>
+                        <div class = "add_place_manage" id = "add_place" style = "margin-left: 31.5vw;">Add Place</div> <!-- TODO -->
+                        <div class = "add_place_manage" id = "manage">Manage</div> <!-- TODO -->
                     </div>
                     <div class = "other_places_" id = "other_places_">
-                        <div class = "other_places_box" id = "other_places_box" style = "margin-right: 4vw;">
+                        <div class = "other_places_box" id = "other_places_box" style = "margin-right: 4vw;" onclick="location.href='details/{{ current.name | safe }}';">
                             <div class = "other_places_image" id = "other_places_image">
                                 <div class = "other_places_temperature" id = "other_places_temperature">
                                     <img src = "../static/images/temperature3.png" style = "width: 3.5vw; height: 3vw;">
